--- a/package.json
+++ b/package.json
@@ -31,9 +31,9 @@
     "eslint-config-standard": "^12.0.0",
     "eslint-plugin-import": "^2.13.0",
     "eslint-plugin-jest": "^21.17.0",
-    "eslint-plugin-node": ">=7.0.0",
-    "eslint-plugin-promise": ">=4.0.0",
-    "eslint-plugin-standard": ">=4.0.0",
+    "eslint-plugin-node": "^7.0.0",
+    "eslint-plugin-promise": "^4.0.0",
+    "eslint-plugin-standard": "^4.0.0",
     "jest": "^24.7.1",
     "pre-commit": "^1.2.2",
     "supertest": "^4.0.2"
