--- a/.gitignore
+++ b/.gitignore
@@ -1,28 +1,15 @@
-# system
-**/*/.DS_Store
+.DS_Store
+node_modules
+cache
+logs 
+.jest
+coverage
+docs
+tmp
 
-# Dependency directories
-node_modules/
- 
-# Logs
-logs/
 *.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-
-# package
-.yarnclean
-.npm
-
-# test
-.jest/
-coverage
-
-# vscode
-!.vscode/launch.json
-
-docs/*
-tmp/*
 
 config/test.js
